--- a/charts/visual-regression-tracker/templates/service-ui.yaml
+++ b/charts/visual-regression-tracker/templates/service-ui.yaml
@@ -6,9 +6,9 @@ metadata:
     {{- include "visual-regression-tracker.labels" . | nindent 4 }}
     component: ui
 spec:
-  type: {{ .Values.ui.service.type }}
+  type: {{ .Values.vrtComponents.ui.service.type }}
   ports:
-    - port: {{ .Values.ui.service.port }}
+    - port: {{ .Values.vrtComponents.ui.service.port }}
       targetPort: http
       protocol: TCP
       name: http
