fluentd-elasticsearch: allow creation of extra labels
Signed-off-by: Jamie Wiebe <jamiewiebe@gmail.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -19,6 +19,9 @@ spec:
     metadata:
       labels:
         {{- include "fluentd-elasticsearch.selectorLabels" . | nindent 8 }}
+        {{- $k, $v := range .Values.labels }}
+        {{ $k }}: {{ $v }}
+        {{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmaps.yaml") . | sha256sum }}
 {{- if .Values.podAnnotations }}
