--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -19,8 +19,8 @@ spec:
     metadata:
       labels:
         {{- include "fluentd-elasticsearch.selectorLabels" . | nindent 8 }}
-        {{- $k, $v := range .Values.labels }}
-        {{ $k }}: {{ $v }}
+        {{- with .Values.labels }}
+        {{- toYaml . | nindent 8 }}
         {{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmaps.yaml") . | sha256sum }}
