fluentd-elasticsearch: allow creation of extra labels (#137)
* fluentd-elasticsearch: allow creation of extra labels

Signed-off-by: Jamie Wiebe <jamiewiebe@gmail.com>

* fix chart version

Signed-off-by: Jamie Wiebe <jamiewiebe@gmail.com>

* use with instead of range

Signed-off-by: Jamie Wiebe <jamiewiebe@gmail.com>

* fix file permissions

Signed-off-by: André Bauer <andre.bauer@staffbase.com>

Signed-off-by: Jamie Wiebe <jamiewiebe@gmail.com>
Signed-off-by: André Bauer <monotek@users.noreply.github.com>
Signed-off-by: André Bauer <andre.bauer@staffbase.com>
Co-authored-by: André Bauer <monotek@users.noreply.github.com>
Co-authored-by: André Bauer <andre.bauer@staffbase.com>

--- a/charts/fluentd-elasticsearch/templates/daemonset.yaml
+++ b/charts/fluentd-elasticsearch/templates/daemonset.yaml
@@ -19,6 +19,9 @@ spec:
     metadata:
       labels:
         {{- include "fluentd-elasticsearch.selectorLabels" . | nindent 8 }}
+        {{- with .Values.labels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       annotations:
         checksum/config: {{ include (print $.Template.BasePath "/configmaps.yaml") . | sha256sum }}
 {{- if .Values.podAnnotations }}
