--- a/charts/mysqldump/templates/configmap.yaml
+++ b/charts/mysqldump/templates/configmap.yaml
@@ -17,3 +17,8 @@ data:
   OS_USERNAME: {{ .Values.upload.openstack.user }}
   OS_USER_DOMAIN_NAME: {{ .Values.upload.openstack.userDomain }}
 {{- end }}
+{{- if .Values.upload.s3.enabled }}
+  S3_ENDPOINT: {{ .Values.upload.s3.endpoint }}
+  S3_ACCESSKEY: {{ .Values.upload.s3.accesskey }}
+  S3_BACKETNAME: {{ .Values.upload.s3.bucketname }}
+{{- end }}
