--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -140,6 +140,16 @@ upload:
     # set to 0 to disable TTL on uploaded files
     ttlDays: 30
 
+  s3:
+    enabled: false
+    bucketname: /mysql-backup
+    endpoint: https://yourdomain/
+    accesskey: ""
+    secretkey: ""
+    # existingSecret can be enabled to use an existing secret
+    existingSecret: ""
+    # existingSecretKey defines the key to use, or 'openstack-backup-password' if not set
+    existingSecretKey: ""
 resources: {}
   # We usually recommend not to specify default resources and to leave this as a conscious
   # choice for the user. This also increases chances charts run on environments with little
