--- a/charts/mysqldump/templates/configmap-script.yaml
+++ b/charts/mysqldump/templates/configmap-script.yaml
@@ -35,7 +35,7 @@ data:
     {{ if or (.Values.persistence.enabled) (.Values.persistentVolumeClaim) }}
     {{ if .Values.housekeeping.enabled }}
     echo "delete old backups"
-    find ${BACKUP_DIR} -maxdepth 2 -mtime +${KEEP_DAYS} -regex "^${BACKUP_DIR}/.*[0-9]*_.*\.sql\.gz$" -type f -exec rm {} \;
+    find ${BACKUP_DIR} -type d -name 'lost+found' -prune -o -maxdepth 2 -mtime +${KEEP_DAYS} -regex "^${BACKUP_DIR}/.*[0-9]*_.*\.sql\.gz$" -type f -exec rm {} \;
     {{ end -}}
     {{ end -}}
 
