use awscli to upload
Signed-off-by: gang.liu <14845458+stringang@users.noreply.github.com>

--- a/charts/mysqldump/templates/configmap.yaml
+++ b/charts/mysqldump/templates/configmap.yaml
@@ -21,4 +21,5 @@ data:
   S3_ENDPOINT: {{ .Values.upload.s3.endpoint }}
   S3_ACCESSKEY: {{ .Values.upload.s3.accesskey }}
   S3_BACKETNAME: {{ .Values.upload.s3.bucketname }}
+  S3_REGION: {{ .Values.upload.s3.region }}
 {{- end }}
