--- a/charts/mysqldump/templates/configmap.yaml
+++ b/charts/mysqldump/templates/configmap.yaml
@@ -20,6 +20,6 @@ data:
 {{- if .Values.upload.s3.enabled }}
   S3_ENDPOINT: {{ .Values.upload.s3.endpoint }}
   S3_ACCESSKEY: {{ .Values.upload.s3.accesskey }}
-  S3_BACKETNAME: {{ .Values.upload.s3.bucketname }}
+  S3_BUCKETNAME: {{ .Values.upload.s3.bucketname }}
   S3_REGION: {{ .Values.upload.s3.region }}
 {{- end }}
