--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -99,11 +99,7 @@ jobs:
         uses: helm/chart-testing-action@v2.4.0
       - name: Run chart-testing (list-changed)
         id: list-changed
-        run: |
-          changed=$(ct list-changed --config .github/ct.yaml)
-          if [[ -n "$changed" ]]; then
-            echo "::set-output name=changed::true"
-          fi
+        run: if [[ -n "$(ct list-changed --config .github/ct.yaml)" ]]; then echo 'changed=true' >> "$GITHUB_OUTPUT"; fi
       - name: Create kind cluster
         uses: helm/kind-action@v1.8.0
         if: steps.list-changed.outputs.changed == 'true'
