fix nil pointer
Signed-off-by: gang.liu <14845458+stringang@users.noreply.github.com>

--- a/charts/mysqldump/templates/secret-s3.yaml
+++ b/charts/mysqldump/templates/secret-s3.yaml
@@ -1,5 +1,4 @@
-{{- if .Values.upload.s3.enabled }}
-{{- if not .Values.upload.s3.existingSecret }}
+{{- if and (.Values.upload.s3.enabled) (not .Values.upload.s3.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -9,6 +8,5 @@ metadata:
 type: Opaque
 data:
   S3_SECRET_KEY: {{ .Values.upload.s3.secretkey | b64enc | quote }}
-{{ end }}
 {{ end }}
 
