fix ci chart testing
Signed-off-by: gang.liu <14845458+stringang@users.noreply.github.com>

--- a/charts/mysqldump/ci/schedule-values.yaml
+++ b/charts/mysqldump/ci/schedule-values.yaml
@@ -14,3 +14,16 @@ mariadb:
     password: "MySqlDumpTest"
     username: "MySqlDumpTest"
   fullnameOverride: "mysqldump-mariadb"
+
+upload:
+  googlestoragebucket:
+    enabled: false
+
+  ssh:
+    enabled: false
+
+  openstack:
+    enabled: false
+
+  s3:
+    enabled: false
