improve configration format in values
Signed-off-by: Frédéric COELHO <frederic.coelho@gmail.com>

--- a/charts/mysqldump/values.yaml
+++ b/charts/mysqldump/values.yaml
@@ -44,7 +44,8 @@ allDatabases:
 options: "--opt --single-transaction"
 
 # options to pass to rsync
-rsync_options: "-av"
+rsync:
+ options: "-av"
 
 # save sql backup to a directory named like the database or "alldatabases"
 saveToDirectory: false
